# svg2webp

./: .babel.exportsOnly.js  .gitignore  Cargo.toml  README.md  README.mdt  bun.lockb  dev.sh  dist.native.sh  dist.sh  do.patch.coffee  do.patch.js  index.d.ts  index.js  index.mjs  out.txt  package.json  patch.coffee  patch.js  run.sh  test.sh
.github/workflows/: CI.yml
coffee/: main.coffee
npm/android-arm-eabi/: README.md  package.json
npm/android-arm64/: README.md  package.json
npm/darwin-arm64/: README.md  package.json
npm/darwin-universal/: README.md  package.json
npm/darwin-x64/: README.md  package.json
npm/freebsd-x64/: README.md  package.json
npm/linux-arm-gnueabihf/: README.md  package.json
npm/linux-arm64-gnu/: README.md  package.json
npm/linux-arm64-musl/: README.md  package.json
npm/linux-x64-gnu/: README.md  package.json
npm/linux-x64-musl/: README.md  package.json
npm/win32-arm64-msvc/: README.md  package.json
npm/win32-ia32-msvc/: README.md  package.json
npm/win32-x64-msvc/: README.md  package.json
sh/: dist.coffee  do.patch.coffee  do.patch.js
src/: lib.rs
test/: main.mjs
