[package]
edition = "2021"
name = "w5_svg2webp"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.71"
image = "0.24.6"
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.12.0", default-features = false, features = ["napi4"] }
napi-derive = "2.12.2"
resvg = "0.32.0"
thiserror = "1.0.40"
tiny-skia = "0.9.0"
webp = "0.2.2"

[build-dependencies]
napi-build = "2.0.1"

[profile.release]
lto = true
